package ch.etmles.makelist.Repositories;

import org.springframework.data.jpa.repository.JpaRepository;

import ch.etmles.makelist.Entities.TierList;

public interface TierListRepository extends JpaRepository<TierList, Long>{

}
